k8/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips-api
  template:
    metadata:
      labels:
        app: trips-api
    spec:
      containers:
      - name: trips
        image: registryzks1348.azurecr.io/trips:v1
        ports:
        - containerPort: 80
        resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: trips-api
---
