k8/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer-api
  template:
    metadata:
      labels:
        app: tripviewer-api
    spec:
      containers:
      - name: tripviewer
        image: registryzks1348.azurecr.io/tripviewer:v1
        ports:
        - containerPort: 80
        resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 500Mi
            
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: tripviewer-api
---
