k8/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userjava-api
  template:
    metadata:
      labels:
        app: userprofile-api
    spec:
      containers:
      - name: userprofile
        image: registryzks1348.azurecr.io/userprofile:v1
        ports:
        - containerPort: 80
        resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 500Mi
            
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: userprofile-api
---
